Add required exports for tests with com.google.testing.compile:compile-testing methods, also make Checkstyle happy